--- a/src/_globalColor.scss
+++ b/src/_globalColor.scss
@@ -4,8 +4,8 @@ For greater control over colors visit each components .scss file. */
 
 // button colors
 $buttonColor: #15abb0;
-$buttonHover: #8c43ce;
-$topButtonHover: #000;
+$buttonHover: #086b03;
+$topButtonHover: #086b03;
 
 // text colors light theme
 $titleColor: #000000;
@@ -36,7 +36,7 @@ $lightBackground2: rgb(255, 255, 255);
 $lightBackground3: #f5f2f4;
 $blogCardContainerColor: #586069;
 // dark background colors
-$darkBackground: #33453d;
+$darkBackground: #213f43;
 
 // light theme box shadows
 $lightBoxShadowDark: rgba(0, 0, 0, 0.2);
@@ -44,7 +44,7 @@ $lightBoxShadow: rgba(0, 0, 0, 0.1);
 $lightBoxShadowDarker: rgba(0, 0, 0, 0.3);
 
 // dark theme box shadows
-$darkBoxShadow: #d9dbdf;
+$darkBoxShadow: #2d0047;
 $darkBoxShadow2: #ffffff;
 
 // linear gradients
