--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -6,7 +6,7 @@
   box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
   border-radius: 10px;
   border: 1px solid $lightBorder1;
-  width: 1100px;
+  margin-bottom: 20px;
 }
 
 .experience-card-dark {
@@ -15,7 +15,7 @@
   box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
   border-radius: 10px;
   border: 1px solid $lightBorder1;
-  width: 1100px;
+  margin-bottom: 20px;
 }
 
 .experience-card:hover {
@@ -33,7 +33,7 @@
   -o-filter: blur(0px);
   -ms-filter: blur(0px);
   filter: blur(0px);
-  height: 5rem;
+  height: 11rem;
   display: flex;
   align-items: flex-end;
   justify-content: center;
@@ -47,7 +47,7 @@
   -o-filter: blur(5px);
   -ms-filter: blur(5px);
   filter: blur(5px);
-  height: 5rem;
+  height: 11rem;
   top: 0;
   left: 0;
   width: 100%;
@@ -67,18 +67,16 @@
 }
 
 .experience-text-company {
-  padding: 10px; /* Adjust padding as needed */
+  text-align: center;
+  padding: 1.5rem;
   margin: 0;
   color: $lightBackground1;
   font-size: 25px;
+  text-align: center;
   font-weight: 700;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  position: absolute;
-  top: 30%;
-  left: 10%;
-  transform: translate(-50%, -50%);
 }
 
 .experience-roundedimg {
@@ -86,11 +84,11 @@
   object-fit: cover;
   left: 0;
   right: 0;
-  top: 2rem;
+  top: 7rem;
   margin-left: auto;
   margin-right: auto;
-  width: 6rem;
-  height: 6rem;
+  width: 8rem;
+  height: 8rem;
   box-shadow: 0 0.5rem 1rem $lightBoxShadowDarker;
   border-radius: 50%;
 }
@@ -128,13 +126,16 @@
 .tech-image-exp {
   width: 30px;
   height: 30px;
-  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
 }
 
 .list-tech-image-exp {
   display: flex;
   justify-content: flex-end;
   margin-top: 0;
+  flex-wrap: wrap; /* Allow the items to wrap to the next line */
+  max-width: 100%;
 }
 
 /* Media Query */
