--- a/src/containers/TechStack/TechStack.scss
+++ b/src/containers/TechStack/TechStack.scss
@@ -48,13 +48,17 @@
   flex-direction: row;
   justify-content: flex-start;
   margin-top: 0;
+  flex-wrap: wrap; /* Allow the items to wrap to the next line */
+  max-width: 100%;
 }
 
 .image-prop {
   width: 45px;
   height: 45px;
   margin-right: 10px;
-  margin-top: 0px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 .subtech {
