--- a/src/containers/codingProfile/codingProfile.scss
+++ b/src/containers/codingProfile/codingProfile.scss
@@ -1,78 +1,41 @@
 @import "../../_globalColor";
 
-.card-image {
-  max-width: 100%;
-  height: auto;
-  width: 250px;
-}
-.card-title {
-  color: $titleColor;
-  font-size: 1.375rem;
-  line-height: 24px;
-  font-weight: 700;
-  margin: 15px 0 0 0;
-}
-.card-subtitle {
-  color: $cardSubtitle;
-  font-size: 1.063rem;
-  line-height: 1.5rem;
-}
-.certificate-card {
-  background-color: $lightBackground2;
-  box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
-  padding: 1.5rem;
-  border-radius: 10px;
-  border: 1px solid $lightBorder1;
-  -webkit-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.certificate-detail-div {
-  text-align: center;
-}
-.certificate-card:hover {
-  box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
-}
-.dark-mode.certificate-card:hover {
-  box-shadow: $achievementCertificateCardHoverDark 0px 20px 30px -10px;
-}
-.certificate-image-div {
-  position: relative;
-  height: 250px;
-  overflow: hidden;
+.codingProfile-section {
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.codingProfile-cards-div {
-  display: grid;
-  gap: 1rem 1rem;
-  grid-template-columns: repeat(5, 1fr); /* Two columns */
-  grid-template-rows: repeat(3, auto); /* Two rows */
-}
-.certificate-card-footer {
-  display: flex;
-  align-items: center;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  gap: 1rem 1rem;
 }
-.certificate-card-footer span.certificate-tag {
-  background: $buttonColor;
-  color: $lightBackground3;
-  vertical-align: middle;
-  align-items: center;
-  border-radius: 4px;
-  display: inline-flex;
-  font-size: 0.75rem;
-  height: 4em;
-  justify-content: center;
-  white-space: nowrap;
-  line-height: 1.5;
-  margin: 0 0.5rem 0.5rem 0;
-  padding: 0 0.75em;
-  cursor: pointer;
-  transition: 0.2s ease-in;
+
+.codingProfile-heading {
+  font-size: 56px;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0px;
 }
-span.certificate-tag:hover {
-  background: $buttonHover;
+.codingProfile-subtitle {
+  text-transform: uppercase;
+  margin: 0px;
+  margin-bottom: 50px;
+}
+.subTitle {
+  color: $subTitle;
+}
+
+/* Media Query */
+@media (max-width: 1380px) {
+  .codingProfile-heading {
+    font-size: 40px;
+  }
+}
+@media (max-width: 768px) {
+  .codingProfile-heading {
+    font-size: 30px;
+    text-align: center;
+  }
+  .codingProfile-subtitle {
+    font-size: 16px;
+    line-height: normal;
+    text-align: center;
+  }
 }
