--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -168,6 +168,9 @@
     font-size: 18px;
   }
   .experience-text-desc {
-    font-size: 16px;
+    font-size: 20px;
+  }
+  .subTitle {
+    font-size: 14px;
   }
 }
