--- a/src/containers/MiniProjects/MiniProject.scss
+++ b/src/containers/MiniProjects/MiniProject.scss
@@ -1,70 +1,78 @@
 @import "../../_globalColor";
 
-.card-image {
-  max-width: 100%;
-  height: auto;
-  width: 250px;
+.mini-card-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the image covers the entire container area */
+  border-radius: inherit;
 }
-.card-title {
+.mini-card-title {
   color: $titleColor;
   font-size: 22px;
   line-height: 24px;
   font-weight: 700;
   margin: 15px 0 0 0;
 }
-.card-subtitle {
+.mini-card-subtitle {
   color: $cardSubtitle;
   font-size: 17px;
   line-height: 1.5rem;
 }
-.project-card {
+.mini-project-card {
   display: flex;
   flex-direction: column;
-  background-color: $lightBackground2;
+  align-items: center; /* Centers the content horizontally */
   padding: 1.5rem;
   border-radius: 10px;
   border: 1px solid $lightBorder1;
-  justify-content: center;
+  transition: all 0.3s ease;
+  justify-content: space-between;
 }
-.project-card-light {
+.mini-project-card-light {
   box-shadow: $lightBoxShadowDark 0px 10px 30px -15px;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
-.project-card-dark {
+.mini-project-card-dark {
   box-shadow: 0px 10px 30px -15px $darkBoxShadow;
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.25s ease;
 }
 
-.project-detail {
+.mini-project-detail {
   text-align: center;
+  margin-top: 1rem;
 }
-.project-card-light:hover {
+.mini-project-card-light:hover {
   box-shadow: $lightBoxShadowDark 0px 20px 30px -10px;
 }
-.project-card-dark:hover {
+.mini-project-card-dark:hover {
   box-shadow: 0px 20px 30px -10px $darkBoxShadow;
 }
-.project-image {
-  position: relative;
-  height: 250px;
-  overflow: hidden;
+.mini-project-image {
+  width: 100%;
+  height: 200px; /* Set a consistent height for all images */
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden; /* Ensures the image doesn't overflow the container */
+  background-color: $lightBackground2; /* Optional: Adds a background for consistency */
+  border-radius: 8px; /* Optional: Adds rounded corners */
 }
 
-.projects-container {
+.mini-projects-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1rem 1rem;
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(250px, 1fr)
+  ); /* Adjust minmax values as needed */
+  gap: 1.5rem;
 }
 
-.project-card-footer span.project-tag {
+.mini-project-card-footer span.mini-project-tag {
   background: $buttonColor;
   color: $lightBackground3;
   vertical-align: middle;
@@ -83,7 +91,7 @@
 }
 
 @media (max-width: 768px) {
-  .project-subtitle {
+  .mini-project-subtitle {
     font-size: 16px;
     text-align: center;
   }
